samples/_failures_safe/1761042939_ddfa67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3847c15a.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_3847c15a.c:182:30: error: expected ‘;’ at end of input
  182 |     for (int i = 0; i < count
      |                              ^
      |                              ;
./samples/SAFE/__tmp_3847c15a.c:182:5: error: expected declaration or statement at end of input
  182 |     for (int i = 0; i < count
      |     ^~~
